# opspilot-agentic-rag

./: .env.example  .gitattributes  .gitignore  README.md  main.py  pyproject.toml
app/: api.py  config.py  ui.py
app/agent/: evidence.py  graph.py  prompts.py  response_validator.py  rollback_decision.py  source_footer.py  state.py  tool_planner.py
app/llm/: ollama_client.py
app/rag/: chunker.py  retriever.py  vector_store.py
app/tools/: deployments.py  log_search.py  service_health.py
data/docs/: checkout_runbook.md  deployment_troubleshooting.md  incident_response_policy.md  payment_service_runbook.md
data/eval/: eval_cases.json  eval_results.json
data/mock_api/: deployments.json  service_health.json
docs/: project_explanation.md
scripts/: evaluate_agent.py  ingest.py  query_rag.py  run_agent.py  triage_with_tools.py
