[project]
name = "opspilot-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "gradio>=6.14.0",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "uvicorn>=0.47.0",
]
